# sdl_cpp

./: CMakeLists.txt  sdl_first_window.cpp  sdl_gui_configuration.h.in
include/Mathfunctions/: CMakeLists.txt  Mathfunctions.cpp  mysqrt.cpp  mysqrt.h
include/MySDLUtils/: CMakeLists.txt  SDLUtils.cpp  SDLUtils.h  close.cpp  close.h  init.cpp  init.h  loadMedia.cpp  loadMedia.h
src/: sdl_gui.cpp
